fixed tablet padding
Took away the extra padding from the bottom of the pics

--- a/classHW4/main.css
+++ b/classHW4/main.css
@@ -96,7 +96,6 @@ h2 {
 
 .box-container img{
     width: 100%;
-    /*margin-top: 100px;*/
     padding-top: 197px;
     margin-top: 50px;
 }
@@ -196,14 +195,13 @@ strong {
         height: 450px;
         padding: 1px 30px;
         margin-bottom: 50px;
-        padding-bottom: 350px;
+        padding-bottom: 50px;
     }
     
     .box-container img{
         width: 380px;
         margin-top: 50px;
         padding: 0px;
-        padding-top: 150px;
     }
 
 
